doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/bluej.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/commons-httpclient-3.1.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/commons-codec-1.3.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/Users/froberge/projects/greenfoot/helloWorld/helloWorld
-d
/Users/froberge/projects/greenfoot/helloWorld/helloWorld/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/Greenfoot 2.4.2/Greenfoot.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/froberge/projects/greenfoot/helloWorld/helloWorld/myWorld.java
<---- end of javadoc command ---->
Loading source file /Users/froberge/projects/greenfoot/helloWorld/helloWorld/myWorld.java...
/Users/froberge/projects/greenfoot/helloWorld/helloWorld/myWorld.java:40: error: ';' expected
        Greenfoot.isKeyDown(_keyName_)
                                      ^
1 error
